--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luke Evans Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" media="screen (max-width:980px)" href="./assets/css/style.css">
+    <link rel="stylesheet" media="screen (max-width:768px)" href="./assets/css/style.css">
+    <link rel="stylesheet" media="screen (max-width:640px)" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial scale=1">
 
 </head>
 
@@ -16,25 +20,25 @@
             <source src="assets/images/meteorengine.mp4" type="video/mp4">
         </video>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
-            <h2 class="lukeevans">Luke Evans</h2>
+            <a class="lukeevans navbar-brand" href="#">Luke Evans</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
-            <section>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar navbar-nav navbar-right">
-                        <li class="nav-item active">
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <div class="btn-nav">
                             <a class="nav-link" href="./index.html">About </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contact.html">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </section>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <div class="container" style="width: 18rem;">
             <form class="col-lg-12 col-md-12 border">
