--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luke Evans Portfolio</title>
+    <!-- Link to Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- Link to media query style sheets-->
     <link rel="stylesheet" media="screen (max-width:980px)" href="./assets/css/style.css">
     <link rel="stylesheet" media="screen (max-width:768px)" href="./assets/css/style.css">
     <link rel="stylesheet" media="screen (max-width:640px)" href="./assets/css/style.css">
@@ -16,14 +18,15 @@
 
 <body>
     <section class="header">
+        <!-- Link for background video image -->
         <video autoplay loop class="meteorengine" muted plays-inline>
             <source src="assets/images/meteorengine.mp4" type="video/mp4">
         </video>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
-            <a class="lukeevans navbar-brand" href="#">Luke Evans</a>
+            <a class="navbar-brand" href="#">Luke Evans</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+          <span class="navbar-toggler-icon"></span>
+        </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
@@ -40,43 +43,44 @@
                 </ul>
             </div>
         </nav>
-        <div class="container" style="width: 18rem;">
-            <form class="col-lg-12 col-md-12 border">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="page-header border-bottom">
-                            <h1>Contact</h1>
-                        </div>
+    </section>
+    <div class="contact" style="width: 40rem;">
+        <form class="col-lg-12 col-md-12 border">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="page-header border-bottom">
+                        <h1>Contact</h1>
                     </div>
                 </div>
-                <div class="form-row">
-                    <div class="form-group col-lg-12">
-                        <label for="inputName">Name</label>
-                        <input type="text" class="form-control" id="inputName" placeholder="JohnDoe">
-                    </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-lg-12">
+                    <label for="inputName">Name</label>
+                    <input type="text" class="form-control" id="inputName" placeholder="John Smith">
                 </div>
-                <div class="form-row">
-                    <div class="form-group col-lg-12">
-                        <label for=inputEmail1>Email</label>
-                        <input type="email" class="form-control" id="inputEmail1" placeholder="example@gmail.com">
-                    </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-lg-12">
+                    <label for=inputEmail1>Email</label>
+                    <input type="email" class="form-control" id="inputEmail1" placeholder="example@gmail.com">
                 </div>
-                <div class="form-row">
-                    <div class="form-group col-lg-12">
-                        <label for="inputMessage">Message</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Send me a note!" rows="6"></textarea>
-                    </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-lg-12">
+                    <label for="inputMessage">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Send me a note!" rows="6"></textarea>
                 </div>
+            </div>
 
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-        <footer class="col-12 fixed-bottom">
-            <p>
-                &copy;Copyright Luke Evans
-            </p>
-            <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
-        </footer>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+    <footer class="col-12 fixed-bottom">
+        <p>
+            &copy;Copyright Luke Evans
+        </p>
+        <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
+    </footer>
 </body>
 
 </html>
