--- a/portfolio.html
+++ b/portfolio.html
@@ -4,40 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Luke Evans Portfolio</title>
+    <!-- Link to Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- Link to media query style sheets-->
     <link rel="stylesheet" media="screen (max-width:980px)" href="./assets/css/style.css">
     <link rel="stylesheet" media="screen (max-width:768px)" href="./assets/css/style.css">
     <link rel="stylesheet" media="screen (max-width:640px)" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial scale=1">
+
 </head>
 
 <body>
-    <video autoplay loop class="meteorengine" muted plays-inline>
-        <source src="assets/images/meteorengine.mp4" type="video/mp4">
-    </video>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
-        <a class="lukeevans navbar-brand" href="#">Luke Evans</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <div class="btn-nav">
-                        <a class="nav-link" href="./index.html">About </a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
+    <section class="header">
+        <!-- Link for background video image -->
+        <video autoplay loop class="meteorengine" muted plays-inline>
+            <source src="assets/images/meteorengine.mp4" type="video/mp4">
+        </video>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
+            <a class="navbar-brand" href="#">Luke Evans</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <div class="btn-nav">
+                            <a class="nav-link" href="./index.html">About </a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </section>
     <form class="container border-dark mb-2">
         <div class="row">
             <div class="col-lg-12 col-md-12">
