updated header layout, text size of First.LastName, increased padding right for boarder on header

--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
         <video autoplay loop class="meteorengine" muted plays-inline>
             <source src="assets/images/meteorengine.mp4" type="video/mp4">
         </video>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
+            <a class="navbar-brand" href="#"><strong>Luke Evans</strong></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <div class="btn-nav">
+                            <a class="nav-link" href="./index.html">About </a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </section>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
-        <a class="navbar-brand" href="#">Luke Evans</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <div class="btn-nav">
-                        <a class="nav-link" href="./index.html">About </a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
     <div class="container" style="width: 40rem;">
         <form class="col-lg-12 col-md-12 border">
 
@@ -52,20 +52,22 @@
 
             <div class="row">
                 <div class="col-md-12">
+                    <!-- My Avatar -->
                     <img src="./assets/images/winterlulResize.png" alt="WintersFox" class="img-thumbnail">
                     <p>
                         Hello and welcome to my about me page!
                         <br><br> My name is Luke Evans. I was born and raised in Gold Hill North Carolina on a Tenessee walking horse farm. After leaving college I started within construction, the restauraunt industry, car sales, and event setup/management.
                         These jobs taught me what I did not want to do with the rest of my life.
-                        <br><br> From working in these industries my obsession with videogames quickly became a burning desire that I wanted to pursue. I made the leap and applied to one of my favorite video game companies (EpicGames) for an entry level
-                        QA position working on Fortnite Save the world. Soon after I transitioned to the Performance and Memory team as a software tester to help develop and optomize Fortnite Battle Royale and Creative mode. I worked diligently for the
-                        past 2 years to help make Fortnite one of the best video games in the world.
-                        <br> <br> Some of the things I enjoy:
+                        <br><br> From working in these industries my obsession with videogames quickly became a burning desire that I wanted to pursue.
+
+                        <br><br> I made the leap and applied to one of my favorite video game companies (EpicGames) for an entry level QA position working on Fortnite Save the world. Soon after I transitioned to the Performance and Memory team as a software
+                        tester to help develop and optomize Fortnite Battle Royale and Creative mode. Working diligently for the past 2 years to help make Fortnite one of the best video games in the world!
+                        <br> <br> These are some of the things I enjoy:
                         <ul>
                             <li>Memes</li>
                             <li>Dancing</li>
                             <li>Playing competitive First/Third person shooters</li>
-                            <li>Playing with my Doberman Bella-Mia</li>
+                            <li>Playing with my Doberman, Bella-Mia</li>
                             <li>Pop Culture</li>
                             <li>Rain on a tin roof </li>
                             <li>Competitive swimming</li>
@@ -76,7 +78,8 @@
         </form>
 
     </div>
-    </section>
+
+    <!-- Sticky Footer -->
     <footer class="col-12 fixed-bottom">
         <p>
             &copy;Copyright Luke Evans
