--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             <source src="assets/images/meteorengine.mp4" type="video/mp4">
         </video>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
-            <a class="navbar-brand" href="#">Luke Evans</a>
+            <a class="navbar-brand" href="#"><strong>Luke Evans</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -75,6 +75,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
+    <!-- Sticky -->
     <footer class="col-12 fixed-bottom">
         <p>
             &copy;Copyright Luke Evans
