--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
             <source src="assets/images/meteorengine.mp4" type="video/mp4">
         </video>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
-            <a class="navbar-brand" href="#">Luke Evans</a>
+            <a class="navbar-brand" href="#"><strong>Luke Evans</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,6 +48,8 @@
         <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="page-header border-bottom">
+
+                    <!-- Portfolio Subheading -->
                     <h1 class="subheading m-2"> Portfolio</h1>
                     <div class="d-flex m-2">
                     </div>
@@ -87,9 +89,8 @@
             </div>
         </div>
     </form>
-    </section>
 
-
+    <!-- Sticky Footer -->
     <footer class="col-12 fixed-bottom">
         <p>
             &copy;Copyright Luke Evans
