--- a/portfolio.html
+++ b/portfolio.html
@@ -56,10 +56,12 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="card bg-clear text-dark" style="width:18rem;">
-                        <img class="card-img" src="assets/images/placeholder150.png" alt="Example #1">
-                        <div class="card-img-overlay d-flex flex-column justify-content-left">
-                            <h4 class="card title text-center">Example #1</h4>
-                        </div>
+                        <a href="https://thewintersfox.github.io/HW1-CodeRefactor/" alt="CodeRefactor">
+                            <img class="card-img" src="assets/images/HoriseonCodeRefactor.png" alt="CodeRefactor">
+                            <div class="card-img-overlay d-flex flex-column justify-content-left">
+                                <h4 class="card title text-center">CodeRefactor</h4>
+                            </div>
+                        </a>
                     </div>
                     <div class="card bg-clear text-dark" style="width:18rem;">
                         <img class="card-img" src="assets/images/placeholder150.png" alt="Example #2">
