--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
                         Hello and welcome to my about me page!
                         <br><br> My name is Luke Evans. I was born and raised in Gold Hill North Carolina on a Tenessee walking horse farm. After leaving college I started within construction, the restauraunt industry, car sales, and event setup/management.
                         These jobs taught me what I did not want to do with the rest of my life.
-                        <br><br> From working in these industries my obsession with videogames quickly became a burning desire that I wanted to pursue.
 
                         <br><br> I made the leap and applied to one of my favorite video game companies (EpicGames) for an entry level QA position working on Fortnite Save the world. Soon after I transitioned to the Performance and Memory team as a software
-                        tester to help develop and optomize Fortnite Battle Royale and Creative mode. Working diligently for the past 2 years to help make Fortnite one of the best video games in the world!
+                        tester to help develop and optomize Fortnite Battle Royale, and Creative mode. Working diligently for the past 2 years to help make Fortnite one of the best video games in the world!
                         <br> <br> These are some of the things I enjoy:
                         <ul>
                             <li>Memes</li>
