--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <source src="assets/images/meteorengine.mp4" type="video/mp4">
         </video>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
-            <a class="navbar-brand" href="#"><strong>Luke Evans</strong></a>
+            <a class="navbar-brand" href="./index.html"><strong>Luke Evans</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
