updating portfolio page with HRef link to most recent project (random PW generator) with img as well as updating CSS card img class to fid the card background

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,15 +56,16 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="card bg-clear text-dark" style="width:18rem;">
-                        <a href="https://thewintersfox.github.io/HW1-CodeRefactor/" alt="CodeRefactor">
-                            <img class="card-img" src="assets/images/HoriseonCodeRefactor.png" alt="CodeRefactor">
+                        <a href="https://thewintersfox.github.io/HW1-CodeRefactor/" alt="Code Refactor">
+                            <img class="card-img" src="assets/images/HoriseonCodeRefactor.png" alt="Code Refactor">
                             <div class="card-img-overlay d-flex flex-column justify-content-left">
                                 <h4 class="card title text-center">CodeRefactor</h4>
                             </div>
                         </a>
                     </div>
                     <div class="card bg-clear text-dark" style="width:18rem;">
-                        <img class="card-img" src="assets/images/placeholder150.png" alt="Example #2">
+                        <a href="https://thewintersfox.github.io/PasswordGenerator/" alt="Password Generator"></a>
+                        <img class="card-img" src="assets/images/passwordgenerator.png" alt="Password Generator">
                         <div class="card-img-overlay d-flex flex-column justify-content-left">
                             <h4 class="card title text-center">Example #2</h4>
                         </div>
