updating portfolio html to reflect text change to example two to be code generator text

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                         <a href="https://thewintersfox.github.io/PasswordGenerator/" alt="Password Generator"></a>
                         <img class="card-img" src="assets/images/passwordgenerator.png" alt="Password Generator">
                         <div class="card-img-overlay d-flex flex-column justify-content-left">
-                            <h4 class="card title text-center">Example #2</h4>
+                            <h4 class="card title text-center">Random Code Generator</h4>
                         </div>
                     </div>
                     <div class="card bg-clear text-dark" style="width:18rem;">
