--- a/portfolio.html
+++ b/portfolio.html
@@ -64,11 +64,12 @@
                         </a>
                     </div>
                     <div class="card bg-clear text-dark" style="width:18rem;">
-                        <a href="https://thewintersfox.github.io/PasswordGenerator/" alt="Password Generator"></a>
-                        <img class="card-img" src="assets/images/passwordgenerator.png" alt="Password Generator">
-                        <div class="card-img-overlay d-flex flex-column justify-content-left">
-                            <h4 class="card title text-center">Random Code Generator</h4>
-                        </div>
+                        <a href="https://thewintersfox.github.io/PasswordGenerator/" alt="Password Generator">
+                            <img class="card-img" src="assets/images/passwordgenerator.png" alt="Password Generator">
+                            <div class="card-img-overlay d-flex flex-column justify-content-left">
+                                <h4 class="card title text-center">Random Code Generator</h4>
+                            </div>
+                        </a>
                     </div>
                     <div class="card bg-clear text-dark" style="width:18rem;">
                         <img class="card-img" src="assets/images/placeholder150.png" alt="Example #3">
