update portfoliopage with updated project/previously made apps, update background color and text colors across all pages, move main aboutme section towards middle of page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luke Evans Portfolio</title>
     <!-- Link to Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- Link to media query style sheets-->
     <link rel="stylesheet" media="screen (max-width:980px)" href="./assets/css/style.css">
     <link rel="stylesheet" media="screen (max-width:768px)" href="./assets/css/style.css">
@@ -23,9 +24,10 @@
         </video>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
             <a class="navbar-brand" href="./index.html"><strong>Luke Evans</strong></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
@@ -43,35 +45,63 @@
             </div>
         </nav>
     </section>
-    <div class="container" style="width: 40rem;">
+    <div class="container1" style="width: 40rem;">
         <form class="col-lg-12 col-md-12 border">
 
-            <div class="page-header border-bottom">
+            <div class="page-header border-bottom aboutmeborder">
                 <H1>About Me</H1>
             </div>
 
             <div class="row">
                 <div class="col-md-12">
                     <!-- My Avatar -->
-                    <img src="./assets/images/winterlulResize.png" alt="WintersFox" class="img-thumbnail">
-                    <p>
-                        Hello and welcome to my About Me page!
-                        <br><br> My name is Luke Evans. I was born and raised in Gold Hill, North Carolina on a Tenessee walking horse farm. After leaving college I started in construction, the restauraunt industry, car sales, and event setup/management.
-                        These jobs taught me what I did not want to do with the rest of my life.
+                    <Br>
+                    <div class="aboutmesection">
+                      
+                       <h3> Welcome to my about me page!</h3>
+                       <br><br>
+                       <img src="./assets/images/winterlulResize.png" alt="WintersFox" class="img-thumbnail"> 
+                       <p>
+                            <br><br><br><br><br>
+                            <br><br><br>
+                            <br><br> <br>
+                            My name is Luke Evans. I was born and raised in Gold Hill, North Carolina on a
+                            Tenessee walking horse farm. 
+                            <br>
+                            After leaving college I wanted to get my feet wet in multiple industrys to figure out what I liked. 
+                            <Br>
+                            I've worked construction, the
+                            restauraunt industry, car sales, and event setup/management.
+                            <br>
 
-                        <br><br> I made the leap and applied to one of my favorite video game companies (EpicGames) for an entry level QA position working on Fortnite Save the world. Soon after I transitioned to the Performance and Memory team as a software
-                        tester to help develop and optomize Fortnite Battle Royale, and Creative mode. For the past two years I have been working diligently to help make Fortnite one of the best video games in the world!
-                        <br> <br> These are some of the things I enjoy:
+                            These jobs fortunately taught me what I did not want to do with the rest of my life.
+
+                            <br><br> I made the leap and applied to one of my favorite video game companies (EpicGames)
+                            for an entry level QA position working on Fortnite Save the world. 
+                            <br>
+                            Soon after I transitioned
+                            to the Performance/Memory team as a software
+                            tester to help develop and optomize Fortnite Battle Royale, and Creative mode. I helped bring Fortnite to Switch, Android, and iOS.  I also helped with crossplatform efforts to bridge the gap between platforms helping connect millions of people.
+                            <br>
+                            
+                            <BR>
+                                 For the past
+                            three years I have been working diligently to help make Fortnite one of the best video games
+                            in the world!  
+
+                            <br> <br> These are some of the things I enjoy:
                         <ul>
                             <li>Memes</li>
                             <li>Dancing</li>
-                            <li>Playing competitive First/Third person shooters</li>
+                            <li>Competitive Gaming </li>
+                            <li>First/Third person shooters</li>
                             <li>Playing with my Doberman, Bella-Mia</li>
                             <li>Pop Culture</li>
                             <li>Rain on a tin roof </li>
                             <li>Competitive swimming</li>
                         </ul>
-                    </p>
+                        </p>
+                    </div>
                 </div>
             </div>
         </form>
@@ -83,7 +113,8 @@
         <p>
             &copy;Copyright Luke Evans
         </p>
-        <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
+        <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
+            allowfullscreen></iframe>
         <link rel="stylesheet" href="./assets/css/style.css">
     </footer>
 
