--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luke Evans Portfolio</title>
     <!-- Link to Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- Link to media query style sheets-->
     <link rel="stylesheet" media="screen (max-width:980px)" href="./assets/css/style.css">
     <link rel="stylesheet" media="screen (max-width:768px)" href="./assets/css/style.css">
@@ -24,9 +25,10 @@
         </video>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
             <a class="navbar-brand" href="./index.html"><strong>Luke Evans</strong></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
@@ -50,40 +52,72 @@
                 <div class="page-header border-bottom">
 
                     <!-- Portfolio Subheading -->
-                    <h1 class="subheading m-2"> Portfolio</h1>
+                    <h1 class="subheading m-2"> Projects I've made</h1>
                     <div class="d-flex m-2">
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="card bg-clear text-dark" style="width:18rem;">
-                        <a href="https://thewintersfox.github.io/HW1-CodeRefactor/" alt="Code Refactor">
-                            <img class="card-img" src="assets/images/HoriseonCodeRefactor.png" alt="Code Refactor">
+                    <div class="card bg-clear text-dark coderefactor" style="width:25rem;">
+                        <a href="https://birdtracker.herokuapp.com/" alt="Code Refactor">
+                            <img class="card-img" src="assets/images/birdtrackerpic.png" alt="Code Refactor">
                             <div class="card-img-overlay d-flex flex-column justify-content-left">
-                                <h4 class="card title text-center">CodeRefactor</h4>
                             </div>
+                            <h4 class="card title text-center birdtrackerapp">BirdTrackerApp</h4>
+                            <h5><strong>Summary:</strong></h5>
+                            <p > This is a fullstack web project made to track birds/allow users to add new birds to the
+                                database</p>
+
+                            <Br>
+
+                            <h5> <strong>Technology Used: </strong> </h5>
+
+                            <p>Axios, bcryptjs, Express, NPM, Express-handlebars, passport, Squelize, MySQL,travis.yml,
+                                bootstrap, JavaScript, Jquery
+                            </p>
                         </a>
                     </div>
-                    <div class="card bg-clear text-dark" style="width:18rem;">
-                        <a href="https://thewintersfox.github.io/PasswordGenerator/" alt="Password Generator">
-                            <img class="card-img" src="assets/images/passwordgenerator.png" alt="Password Generator">
+                    <div class="card bg-clear text-dark" style="width:25rem;">
+                        <a href="https://thadkingcole.github.io/is_it_open/" alt="is_it_open">
+                            <img class="card-img" src="assets/images/isitopen.png" alt="Password Generator">
                             <div class="card-img-overlay d-flex flex-column justify-content-left">
-                                <h4 class="card title text-center">Random Code Generator</h4>
                             </div>
+                            <h4 class="card title text-center codegenerator">IsItOpen?</h4>
+                            <h5><strong>Summary:</strong></h5>
+                            <p > This app was made amid the CoronaVirus pandemic, this is meant to give users a general idea of places that they could go for food, a drink, or to the park.  This app gives the user dropdown menus for a mile radius then users can input their local city.  After searching the app will feed back open, closed or unknown status for the restaurant or parks.</p>
+
+                            <Br>
+
+                            <h5> <strong>Technology Used: </strong> </h5>
+
+                            <p>Covid-19 Data API, Covid-19 Statistics API, Yelp Fusion API, Javascript, HTML, CSS
+                            </p>
                         </a>
                     </div>
-                    <div class="card bg-clear text-dark" style="width:18rem;">
-                        <img class="card-img" src="assets/images/placeholder150.png" alt="Example #3">
+                    <div class="card bg-clear text-dark" style=" width:25rem;">
+                        <img class="card-img" src="assets/images/goodreadme.png" alt="Good Readme Generator">
                         <div class="card-img-overlay d-flex flex-column justify-content-left">
-                            <h4 class="card title text-center">Example #3</h4>
+                    
                         </div>
+                        <h4 class="card title text-center goodreadme">GoodReadMe Generator</h4>
+                        <h5><strong>Summary:</strong></h5>
+                        <p > This is to allow users to create a Readme after they're done creating their application.  This automates the process by asking the user questions about their app.  The user then can take the printed out Readme and upload it to their project.</p>
+
+                        <Br>
+
+                        <h5> <strong>Technology Used: </strong> </h5>
+
+                        <p>Inquirer, Markdown, FS,
+                            bootstrap, JavaScript, Jquery
+                        </p>
+
                     </div>
-                    <div class="card bg-clear text-dark" style="width:18rem;">
+                    <div class="card bg-clear text-dark" style=" width:25rem;">
                         <img class="card-img" src="assets/images/placeholder150.png" alt="Example #4">
                         <div class="card-img-overlay d-flex flex-column justify-content-left">
                             <h4 class="card title text-center">Example #4</h4>
                         </div>
                     </div>
-                    <div class="card bg-clear text-dark" style="width:18rem;">
+                    <div class="card bg-clear text-dark" style="Height:25rem width:25rem;">
                         <img class="card-img" src="assets/images/placeholder150.png" alt="Example #5">
                         <div class="card-img-overlay d-flex flex-column justify-content-left">
                             <h4 class="card title text-center">Example #5</h4>
@@ -99,7 +133,8 @@
         <p>
             &copy;Copyright Luke Evans
         </p>
-        <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
+        <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0"
+            allowfullscreen></iframe>
         <link rel="stylesheet" href="./assets/css/style.css">
     </footer>
 </body>
