--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="page-header border-bottom">
-                        <h1>Contact</h1>
+                        <h1>Luke Evans</h1>
                     </div>
                 </div>
             </div>
