update portfolio page with past app content, update text coloring on index page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                        <h3> Welcome to my about me page!</h3>
                        <br><br>
                        <img src="./assets/images/winterlulResize.png" alt="WintersFox" class="img-thumbnail"> 
-                       <p>
+                       <p1>
                             <br><br><br><br><br>
                             <br><br><br>
                             <br><br> <br>
@@ -79,9 +79,13 @@
                             <br><br> I made the leap and applied to one of my favorite video game companies (EpicGames)
                             for an entry level QA position working on Fortnite Save the world. 
                             <br>
-                            Soon after I transitioned
-                            to the Performance/Memory team as a software
-                            tester to help develop and optomize Fortnite Battle Royale, and Creative mode. I helped bring Fortnite to Switch, Android, and iOS.  I also helped with crossplatform efforts to bridge the gap between platforms helping connect millions of people.
+                            <br>
+                           
+                            Soon after I moved to the Performance/Memory team as a software
+                            tester to help develop and optomize Fortnite Battle Royale, and Creative mode.
+                            <br>
+                            <br>I helped bring Fortnite to Switch, Android, and iOS.  <br>
+                            <br> I also helped with crossplatform efforts to bridge the gap between platforms helping connect millions of people.
                             <br>
                             
                             <BR>
@@ -100,7 +104,7 @@
                             <li>Rain on a tin roof </li>
                             <li>Competitive swimming</li>
                         </ul>
-                        </p>
+                        </p1>
                     </div>
                 </div>
             </div>
