--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
                             </div>
                             <h4 class="card title text-center birdtrackerapp">BirdTrackerApp</h4>
                             <h5><strong>Summary:</strong></h5>
-                            <p > This is a fullstack web project made to track birds/allow users to add new birds to the
+                            <p> This is a fullstack web project made to track birds/allow users to add new birds to the
                                 database</p>
 
                             <Br>
@@ -83,7 +83,11 @@
                             </div>
                             <h4 class="card title text-center codegenerator">IsItOpen?</h4>
                             <h5><strong>Summary:</strong></h5>
-                            <p > This app was made amid the CoronaVirus pandemic, this is meant to give users a general idea of places that they could go for food, a drink, or to the park.  This app gives the user dropdown menus for a mile radius then users can input their local city.  After searching the app will feed back open, closed or unknown status for the restaurant or parks.</p>
+                            <p> This app was made amid the CoronaVirus pandemic, this is meant to give users a general
+                                idea of places that they could go for food, a drink, or to the park. This app gives the
+                                user dropdown menus for a mile radius then users can input their local city. After
+                                searching the app will feed back open, closed or unknown status for the restaurant or
+                                parks.</p>
 
                             <Br>
 
@@ -96,11 +100,13 @@
                     <div class="card bg-clear text-dark" style=" width:25rem;">
                         <img class="card-img" src="assets/images/goodreadme.png" alt="Good Readme Generator">
                         <div class="card-img-overlay d-flex flex-column justify-content-left">
-                    
+
                         </div>
                         <h4 class="card title text-center goodreadme">GoodReadMe Generator</h4>
                         <h5><strong>Summary:</strong></h5>
-                        <p > This is to allow users to create a Readme after they're done creating their application.  This automates the process by asking the user questions about their app.  The user then can take the printed out Readme and upload it to their project.</p>
+                        <p> This is to allow users to create a Readme after they're done creating their application.
+                            This automates the process by asking the user questions about their app. The user then can
+                            take the printed out Readme and upload it to their project.</p>
 
                         <Br>
 
@@ -112,15 +118,34 @@
 
                     </div>
                     <div class="card bg-clear text-dark" style=" width:25rem;">
-                        <img class="card-img" src="assets/images/placeholder150.png" alt="Example #4">
+                        <img class="card-img" src="assets/images/gifofquiz.gif" alt="jsCodeQuiz">
                         <div class="card-img-overlay d-flex flex-column justify-content-left">
-                            <h4 class="card title text-center">Example #4</h4>
+                        </div>
+                    
+                            <h4 class="card title text-center jsCodeQuiz">JavaScript Code Quiz</h4>
+                            <h5><strong>Summary:</strong></h5>
+                            <p>This codequiz was made entirely using dynamically created Javascript.</p>
+                            <Br>
+
+                            <h5> <strong>Technology Used: </strong> </h5>
+
+                            <p> JavaScript, Css, HTML
+                            </p>
                         </div>
                     </div>
-                    <div class="card bg-clear text-dark" style="Height:25rem width:25rem;">
-                        <img class="card-img" src="assets/images/placeholder150.png" alt="Example #5">
+                    <div class="card bg-clear text-dark" style="Width: 25rem">
+                        <img class="card-img" src="assets/images/employeetracker.png" alt="employeetracker">
                         <div class="card-img-overlay d-flex flex-column justify-content-left">
-                            <h4 class="card title text-center">Example #5</h4>
+                        </div>
+                            <h4 class="card title text-center jsCodeQuiz">EmployeeTrackerApp</h4>
+                            <h5><strong>Summary:</strong></h5>
+                            <p>Employee Tracker is meant to keep track of your employees, departments, and roles.  When the server starts the CLI prompts the user if they would like to Add, View, or Update.  From here it takes the user through each one of those options that the user previously chose.  EmployeeTracker will dynamically update fields within the database.</p>
+                            <Br>
+
+                            <h5> <strong>Technology Used: </strong> </h5>
+
+                            <p> Inquirer, mySQL, console.table, JavaScript, Css, HTML
+                            </p>
                         </div>
                     </div>
                 </div>
